--- a/.github/workflows/build-angular.yml
+++ b/.github/workflows/build-angular.yml
@@ -3,7 +3,7 @@ name: Build static files for website
 on:
   push:
     branches:
-      - master
+      - main
   workflow_dispatch:
     inputs:
       logLevel:
