--- a/.github/workflows/build-angular.yml
+++ b/.github/workflows/build-angular.yml
@@ -45,11 +45,11 @@ jobs:
       run: |
         git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
-        git pull origin master
+        git pull origin main
         git add docs
         git commit -m "build docs" -a
     - name: Push changes
-      uses: ad-m/github-push-action@master
+      uses: ad-m/github-push-action@main
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         branch: ${{ github.ref }}
