--- a/.github/workflows/build-angular.yml
+++ b/.github/workflows/build-angular.yml
@@ -49,7 +49,7 @@ jobs:
         git add docs
         git commit -m "build docs" -a
     - name: Push changes
-      uses: ad-m/github-push-action@main
+      uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         branch: ${{ github.ref }}
