--- a/package.json
+++ b/package.json
@@ -7,15 +7,13 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "predeply": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "cd dist && cp index.html 404.html"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@popperjs/core": "^2.11.7",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.3.3",
-    "gh-pages": "^6.2.0",
     "swiper": "^10.0.4",
     "vue": "^3.2.47",
     "vue-chartjs": "^5.2.0",
